C0: Navigation fix for desktop to keep logo clearance on small desktop screens (smaller logo and white bar). Update to buttons shadow.

--- a/Components/buttons/scss/_buttons.scss
+++ b/Components/buttons/scss/_buttons.scss
@@ -12,12 +12,12 @@
 
     @if($style == button-style-primary) {
         $background-color: $colour-brand-primary;
-        $box-shadow: inset 0 -4px 0 0 rgba($colour-black, 0.2);
+        $box-shadow: inset 0 -3px 0 0 rgba($colour-black, 0.16);
     }
 
     @if($style == button-style-secondary) {
         $background-color: $colour-interaction-100;
-        $box-shadow: inset 0 -4px 0 0 rgba($colour-black, 0.2);
+        $box-shadow: inset 0 -3px 0 0 rgba($colour-black, 0.16);
     }
 
     @if($style == button-style-subtle) {
